build/log/idf_py_stderr_output_132754
Command: make -j 14 all
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c: In function 'event_handler':
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:60:13: error: expected '(' before 'else'
   60 |     else if else if (event_base == WIFI_EVENT && event_id == WIFI_EVENT_STA_CONNECTED)//(event_base == IP_EVENT && event_id == IP_EVENT_STA_GOT_IP)
      |             ^~~~
      |             (
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:49:10: warning: unused variable 'ip_str' [-Wunused-variable]
   49 |     char ip_str[16];
      |          ^~~~~~
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c: At top level:
/home/umesh_adwait/esp-idf/examples/get-started/test_phase2/main/network/wifi_config.c:19:13: warning: 'time_sync_started' defined but not used [-Wunused-variable]
   19 | static bool time_sync_started = false;
      |             ^~~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:141: esp-idf/main/CMakeFiles/__idf_main.dir/network/wifi_config.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6314: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:130: all] Error 2
